# AstraScanner

./: .gitignore  AstraCamera.cpp  AstraCamera.h  CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.h  CaptureWorker.cpp  CaptureWorker.h  Doxyfile  LICENSE.MD  LIVE_CLOUD_LOCATION.txt  LiveCloudWindow.cpp  LiveCloudWindow.h  MainWindow.cpp  MainWindow.h  PointCloudFilters.cpp  PointCloudFilters.h  README.md  export_test.cpp  final_test.ps1  main.cpp  processing_demo.ps1  processing_test.ps1  simple_test.ps1  simple_ui_test.ps1  test.ps1  test_functions.cpp  ui_test.ps1  verification_test.ps1  Структура проекта
.github/workflows/: ci.yml  cmake-multi-platform.yml
src/: main.cpp
src/accel/: DepthToCloudKernel.cu  DepthToCloudKernel.h  GpuAccelerator.cpp  GpuAccelerator.h
src/calibration/: CameraCalibrator.cpp  CameraCalibrator.h
src/capture/: AstraCamera.cpp  AstraCamera.h  CaptureWorker.cpp  CaptureWorker.h  IDepthSensor.h
src/editor/: PointCloudEditor.cpp  PointCloudEditor.h
src/export/: ExportManager.cpp  ExportManager.h
src/filters/: PointCloudFilters.cpp  PointCloudFilters.h
src/gui/: LassoSelector.cpp  LassoSelector.h  LiveCloudWindow.cpp  LiveCloudWindow.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/history/: CloudHistory.cpp  CloudHistory.h
src/project/: ProjectManager.cpp  ProjectManager.h
src/settings/: SettingsManager.cpp  SettingsManager.h
tests/: CMakeLists.txt  test_CloudHistory.cpp  test_PointCloudFilters.cpp
translations/: astrascanner_en.ts  astrascanner_ru.ts
